#494 Fix devices layout on Safari

--- a/server/http-dashboard/app/components/PageLayout/styles.less
+++ b/server/http-dashboard/app/components/PageLayout/styles.less
@@ -44,10 +44,11 @@
 }
 
 .page-layout-tabs-navigation {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
+  //display: flex;
+  //flex-direction: column;
+  //height: 100%;
   > .ant-tabs-bar {
+    //flex-basis: 43px;
     margin: 0 32px;
   }
 }
