--- a/server/http-dashboard/app/scenes/Devices/components/Device/styles.less
+++ b/server/http-dashboard/app/scenes/Devices/components/Device/styles.less
@@ -15,9 +15,9 @@
 }
 
 .devices--device {
-  height: 100%;
-  overflow: auto;
-  display: flex;
-  flex-direction: column;
+  //height: 100%;
+  //overflow: auto;
+  //display: flex;
+  //flex-direction: column;
   padding: @style-size-4 @style-size-4 0;
 }
